--- a/Debug/makefile
+++ b/Debug/makefile
@@ -23,19 +23,19 @@ endif
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
-all: edlplotsdl
+all: EDLPlotCharlie
 
 # Tool invocations
-edlplotsdl: $(OBJS) $(USER_OBJS)
+EDLPlotCharlie: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C Linker'
-	gcc  -o"edlplotsdl" $(OBJS) $(USER_OBJS) $(LIBS)
+	gcc  -o"EDLPlotCharlie" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(OBJS)$(C_DEPS)$(EXECUTABLES) edlplotsdl
+	-$(RM) $(OBJS)$(C_DEPS)$(EXECUTABLES) EDLPlotCharlie
 	-@echo ' '
 
 .PHONY: all clean dependents
